# defect-detection-system

./: .dockerignore  .gitignore  Dockerfile  FINAL_DEMO_GUIDE.md  LICENSE  Makefile  README.en.md  README.md  README.ru.md  cookiecutter.json  docker-compose.monitoring.yml  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt  setup.py  test_environment.py  tox.ini
.dvc/: config
.github/workflows/: ci.yml
data/: raw.dvc
k8s/api/: deployment.yaml  pvc.yaml  service.yaml
k8s/argocd/: application.yaml
k8s/argocd/apps/: api.yaml  mlflow.yaml  monitoring.yaml
k8s/mlflow/: deployment.yaml  pvc.yaml  service.yaml
k8s/monitoring/: grafana-config.yaml  grafana-deployment.yaml  grafana-service.yaml  prometheus-config.yaml  prometheus-deployment.yaml  prometheus-service.yaml
models/: best_model.pth.dvc
monitoring/: prometheus.minikube.yml  prometheus.yml  reference_features.csv  reference_stats.json  reference_target_distribution.json
monitoring/grafana/dashboards/: defect-detection.json
notebooks/: defect-detection.ipynb
reports/drift/: README.md
src/defect_detection/: __init__.py  config.py  dataset.py  features.py  plots.py
src/defect_detection/api/: drift_reports.py  main.py  metrics.py  middleware.py  retraining.py  routes.py  schemas.py  storage.py  translations.py  ui.py
src/defect_detection/modeling/: predict.py  train.py
src/defect_detection/monitoring/: __init__.py  build_reference_features.py  (+5 more)
tests/: test_api.py  test_drift.py  test_evidently_drift.py  test_features.py  test_imports.py  test_predict.py  test_report.py  test_ui.py
(+8 files in other folders)
