[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "defect-detection-system"
version = "0.1.0"
description = "MLOps defect detection system for steel surface segmentation."
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"defect_detection.api" = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 79
target-version = "py312"
src = ["src", "tests"]
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []
